--- a/clientviews/public/course.page.tmpl
+++ b/clientviews/public/course.page.tmpl
@@ -7,8 +7,7 @@
 
 {{define "css"}}
     <style>
-        a:link
-        {
+        a:link {
             color: #2A76C1;
             transition: color 0.5s ease;
             text-decoration: none;
@@ -16,30 +15,29 @@
 
         a:visited.h3,
         a:visited.read-more,
-        a:visited
-        {
+        a:visited {
             color: #2A76C1;
             transition: color 0.5s ease;
             text-decoration: none;
         }
+
         a:hover.h3,
         a:hover.read-more,
-        a:hover
-        {
+        a:hover {
             color: #2A76C1;
             text-decoration: none;
             transition: color 0.5s ease;
         }
-        #content_edit h1
-        {
+
+        #content_edit h1 {
             font-size: 36pt
         }
-        #content_edit h2
-        {
+
+        #content_edit h2 {
             font-size: 30pt
         }
-        #content_edit h3
-        {
+
+        #content_edit h3 {
             font-size: 24pt
         }
     </style>
@@ -171,10 +169,23 @@
         <div class="row">
             <div class="col">
                 <p>&nbsp;</p>
+                {{if or (ne $course.TeamsLink "") (ne $course.ProfEmail "")}}
+                    <div class="text-center">
+                        {{if ne $course.TeamsLink ""}}
+                            <a class="btn btn-outline-secondary text-dark" target="_blank" href="{{$course.TeamsLink}}">Microsoft
+                                Teams</a>
+                        {{end}}
+                        {{if ne $course.ProfEmail ""}}
+                            <a class="btn btn-outline-secondary text-dark" href="mailto:{{$course.ProfEmail}}">Email
+                                Professor</a>
+                        {{end}}
+                    </div>
+                {{end}}
                 <h2 class="mt-3">Lectures</h2>
                 <div class="list-group">
                     {{range $course.Lectures}}
-                        <a class="list-group-item list-group-item-action" href="/courses/lecture/{{.ID}}">{{.LectureName}}</a>
+                        <a class="list-group-item list-group-item-action"
+                           href="/courses/lecture/{{.ID}}">{{.LectureName}}</a>
                     {{end}}
                 </div>
                 <div>&nbsp;</div>
