--- a/clientviews/public/lecture.page.tmpl
+++ b/clientviews/public/lecture.page.tmpl
@@ -185,7 +185,7 @@
                 <p>&nbsp;</p>
                 <hr class="mt-3">
                 <div class="text-center">
-                    <a class="btn btn-outline-secondary" href="/courses/overview/{{$lecture.CourseID}}">Back to Course
+                    <a class="btn btn-outline-secondary text-dark" href="/courses/overview/{{$lecture.CourseID}}">Back to Course
                         Overview</a>
                 </div>
                 <p>&nbsp;</p>
