--- a/clientviews/public/course.page.tmpl
+++ b/clientviews/public/course.page.tmpl
@@ -184,8 +184,10 @@
                 <h2 class="mt-3">Lectures</h2>
                 <div class="list-group">
                     {{range $course.Lectures}}
-                        <a class="list-group-item list-group-item-action"
-                           href="/courses/lecture/{{.ID}}">{{.LectureName}}</a>
+                        {{if eq .Active 1}}
+                            <a class="list-group-item list-group-item-action"
+                               href="/courses/lecture/{{.ID}}">{{.LectureName}}</a>
+                        {{end}}
                     {{end}}
                 </div>
                 <div>&nbsp;</div>
