--- a/clientviews/public/submit-assignment.page.tmpl
+++ b/clientviews/public/submit-assignment.page.tmpl
@@ -172,19 +172,20 @@
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="form-row">
                         <div class="form-group col-md-6 col-xs-12">
-                            <label for="which">For what course?</label>
-                            <select class="custom-select" id="which" name="which_course" required="">
+                            <label for="course_id">For what course?</label>
+                            <select class="custom-select" id="course_id" name="course_id" required="">
                                 <option value="" selected="">Choose one...</option>
-                                <option value="theory">Contemporary Theory I</option>
-                                <option value="reading popular culture">Reading Popular Culture</option>
-                                <option value="victorian">Victorian Literature Survey</option>
+                                {{$courses := index .RowSets "courses"}}
+                                {{range $courses}}
+                                <option value="{{.ID}}">{{.CourseName}}</option>
+                                {{end}}
                             </select>
 
                         </div>
                         <div class="form-group col-md-6 col-xs-12">
                             <label>Choose file</label>
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="customFile" required="" accept="application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document">
+                                <input type="file" name="assignment" class="custom-file-input" id="customFile" required="" accept="application/pdf, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document">
                                 <label class="custom-file-label" for="customFile">Choose file</label>
                             </div>
                         </div>
