--- a/clientviews/admin/partials/top-of-menu.partial.tmpl
+++ b/clientviews/admin/partials/top-of-menu.partial.tmpl
@@ -7,9 +7,11 @@
             <ul class="nav nav-second-level collapse">
                 <li><a href="/admin/courses/all">All Courses</a></li>
                 <li><a href="/admin/courses/0">New Course</a></li>
+                <li><a href="/admin/courses/assignments">Assignments</a></li>
             </ul>
         </li>
     {{end}}
+
 
 
 {{end}}
