--- a/clientviews/public/partials/top-menu.partial.tmpl
+++ b/clientviews/public/partials/top-menu.partial.tmpl
@@ -138,7 +138,7 @@
                                 <i class="fa fa-wrench" style="font-size: 1em"></i>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" role="menu">
-                                <a class="dropdown-item" href="/admin/users/profile">Profile</a>
+                                <a class="dropdown-item" href="/admin/users/profile">My Profile</a>
                                 <a class="dropdown-item" href="/admin/assignments-for-student">My Assignments</a>
                                 {{if ge .Auth.AccessLevel 3}}
                                     <a class="dropdown-item" href="/admin/dashboard">Dashboard</a>
