--- a/clientviews/public/course.page.tmpl
+++ b/clientviews/public/course.page.tmpl
@@ -183,10 +183,15 @@
                 {{end}}
                 <h2 class="mt-3">Lectures</h2>
                 <div class="list-group">
+
                     {{range $course.Lectures}}
                         {{if eq .Active 1}}
-                            <a class="list-group-item list-group-item-action"
-                               href="/courses/lecture/{{.ID}}">{{.LectureName}}</a>
+                            <a class="list-group-item list-group-item-action" href="/courses/lecture/{{.ID}}">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <h6 class="mb-1">{{.LectureName}}</h6>
+                                    <small>{{relativeTime .PostedDate}}</small>
+                                </div>
+                            </a>
                         {{end}}
                     {{end}}
                 </div>
