--- a/clientviews/admin/lecture-admin.page.tmpl
+++ b/clientviews/admin/lecture-admin.page.tmpl
@@ -60,6 +60,27 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="posted_date">Date Posted</label>
+                    {{with .Form.Errors.Get "posted_date"}}
+                        <label class='text-danger'>{{.}}</label>
+                    {{end}}
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fa fa-calendar fa-fw"></i></span>
+                        </div>
+                        <input class="form-control required {{with .Form.Errors.Get "posted_date"}} is-invalid {{end}}"
+                               id="posted_date"
+                               required
+                               autocomplete="off" type='datetime'
+                               name='posted_date'
+                               value='{{humanDateTime $lecture.PostedDate}}'>
+                        <div class="invalid-feedback">
+                            Please enter a value
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <label for="video_choice">Video:</label><br>
                     <select class="form-control select-search" name="video_id" id="video_choice"
                             style="width: 100% !important;">
@@ -111,7 +132,7 @@
                 search: true,
             });
 
-
+            rome(document.getElementById('posted_date'));
         });
 
         function saveClose() {
