--- a/clientviews/admin/assignments-admin.page.tmpl
+++ b/clientviews/admin/assignments-admin.page.tmpl
@@ -12,7 +12,7 @@
         <table id="itable" class="table table-striped table-bordered">
             <thead>
             <tr>
-                <th>ID</th>
+                <th>Description</th>
                 <th>Name</th>
                 <th>Course</th>
                 <th>Date Received</th>
@@ -23,7 +23,7 @@
             {{$assignments := index .RowSets "assignments"}}
             {{range $assignments}}
                 <tr>
-                    <td>{{.ID}}</td>
+                    <td>{{.Description}}</td>
                     <td><a href='/admin/courses/assignment/{{.ID}}'>{{.User.FirstName}} {{.User.LastName}}</a></td>
                     <td>{{.Course.CourseName}}</td>
                     <td>{{humanDateTime .CreatedAt}}</td>
