--- a/clientviews/public/lecture.page.tmpl
+++ b/clientviews/public/lecture.page.tmpl
@@ -266,6 +266,27 @@
 {{define "js"}}
 
     {{ .Page.JS}}
+    {{$lecture := index .RowSets "lecture"}}
+    <script>
+        document.addEventListener("DOMContentLoaded", function (event) {
+            recordStarting();
+            window.addEventListener("unload", recordLeaving, false);
+        });
+
+        function recordStarting() {
+            let formData = new FormData();
+            formData.append("lecture_id", {{$lecture.ID}});
+            formData.append("csrf_token", '{{.CSRFToken}}');
+            navigator.sendBeacon("/courses/lecture/log/record-entering", formData);
+        }
+
+        function recordLeaving() {
+            let formData = new FormData();
+            formData.append("lecture_id", {{$lecture.ID}});
+            formData.append("csrf_token", '{{.CSRFToken}}');
+            navigator.sendBeacon("/courses/lecture/log/record-leaving", formData);
+        }
+    </script>
 
     {{if .IsAuthenticated}}
         <form method="post" name="hiddensavepage" id="hiddensavepage" action="/admin/courses/lecture/ajax/savelecture">
