Record entering/leaving lectures

--- a/clientviews/admin/courses-admin.page.tmpl
+++ b/clientviews/admin/courses-admin.page.tmpl
@@ -144,6 +144,10 @@
                         </div>
                     </div>
                 </div>
+
+                <div>
+                    <a class="btn btn-outline-secondary" href="/admin/courses/{{$course.ID}}/accesses">View Student Access History</a>
+                </div>
             </div>
 
         </div>
