--- a/clientviews/admin/courses-admin.page.tmpl
+++ b/clientviews/admin/courses-admin.page.tmpl
@@ -236,8 +236,8 @@
             console.log("performing sort");
             let fd = new FormData();
             fd.append("csrf_token", "{{.CSRFToken}}");
-            fd.append("sort_order", document.getElementById("sort-list").value);
-            fd.append("course_id", {{$course.ID}});
+            fd.append("sort_list", document.getElementById("sort-list").value);
+            {{/*fd.append("course_id", {{$course.ID}});*/}}
 
             fetch("/admin/courses/ajax/save-lecture-sort-order", {
                 method: 'POST',
@@ -249,7 +249,6 @@
                 .then((response) => {
                     console.log(response.ok);
                 });
-
         }
 
     </script>
