--- a/clientviews/admin/courses-admin.page.tmpl
+++ b/clientviews/admin/courses-admin.page.tmpl
@@ -233,11 +233,9 @@
                 obj.push({id: items[i], order: (i + 1)});
             }
             document.getElementById("sort-list").value = JSON.stringify(obj);
-            console.log("performing sort");
             let fd = new FormData();
             fd.append("csrf_token", "{{.CSRFToken}}");
             fd.append("sort_list", document.getElementById("sort-list").value);
-            {{/*fd.append("course_id", {{$course.ID}});*/}}
 
             fetch("/admin/courses/ajax/save-lecture-sort-order", {
                 method: 'POST',
@@ -247,7 +245,9 @@
                     return response.json();
                 })
                 .then((response) => {
-                    console.log(response.ok);
+                    if (!response.ok) {
+                        attention.alert({icon: "error", html: "Error saving sort order!"})
+                    }
                 });
         }
 
