--- a/clientviews/admin/member.page.tmpl
+++ b/clientviews/admin/member.page.tmpl
@@ -1,9 +1,9 @@
 {{template "admin-base" .}}
 
-{{define "title"}}Member - GoBlender Admin{{end}}
+{{define "title"}}Student - GoBlender Admin{{end}}
 
-{{define "admin-title"}}Member{{end}}
-{{define "content-title"}}Member{{end}}
+{{define "admin-title"}}Student: {{.AdminUser.FirstName}} {{.AdminUser.LastName}}{{end}}
+{{define "content-title"}}Student: {{.AdminUser.FirstName}} {{.AdminUser.LastName}}{{end}}
 
 {{define "content"}}
 
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col">
                 <div class="float-right">
-                    <a href="#!" onclick="becomeUser({{.AdminUser.ID}})" class="btn btn-primary">Become this User</a>
+                    <a href="#!" onclick="becomeUser({{.AdminUser.ID}})" class="btn btn-primary">Become this Student</a>
                 </div>
                 <div class="clearfix mb-2"></div>
             </div>
@@ -21,12 +21,15 @@
     <div class="row">
         <div class="col-md-12">
 
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs" id="studentTabs">
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#user-tab-content">User Information</a>
+                    <a class="nav-link active" id="general-tab" data-toggle="tab" href="#user-tab-content">Student Information</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#access-tab-content" data-toggle="tab">Course Activity</a>
+                    <a class="nav-link" id="activity-tab" href="#access-tab-content" data-toggle="tab">Course Activity</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="assignment-tab" href="#assignments-tab-content" data-toggle="tab">Assignments</a>
                 </li>
             </ul>
 
@@ -206,6 +209,51 @@
                         </table>
                     </div>
                 </div>
+
+                <div class="tab-pane fade show" role="tabpanel" aria-labelledby="general-tab"
+                     id="assignments-tab-content">
+                    <h3 class="mt-3 mb-2">Assignments</h3>
+                    <div class="table-responsive">
+                        <table id="atable" class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>Description</th>
+                                <th>Name</th>
+                                <th>Course</th>
+                                <th>Date Received</th>
+                                <th class="text-center">Processed</th>
+                                <th class="text-center">Grade</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {{$assignments := index .RowSets "assignments"}}
+                            {{$studentID := .AdminUser.ID}}
+                            {{range $assignments}}
+                                <tr>
+                                    <td><a href='/admin/courses/assignment/{{.ID}}?src={{$studentID}}'>{{.Description}}</a></td>
+                                    <td>{{.User.FirstName}} {{.User.LastName}}</td>
+                                    <td>{{.Course.CourseName}}</td>
+                                    <td>{{humanDateTime .CreatedAt}}</td>
+                                    <td class="text-center">
+                                        {{if eq .Processed 1}}
+                                            <span class="badge badge-primary">Processed</span>
+                                        {{else}}
+                                            <span class="badge badge-danger">Not Processed</span>
+                                        {{end}}
+                                    </td>
+                                    <td class="text-center">
+                                        {{if gt .TotalValue 0}}
+                                            {{.Mark}}/{{.TotalValue}}
+                                        {{else}}
+                                            N/A
+                                        {{end}}
+                                    </td>
+                                </tr>
+                            {{end}}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -237,6 +285,19 @@
                 stateSave: true,
                 order: [[2, "desc"]],
             });
+
+            $('#atable').DataTable({
+                stateSave: true,
+                order: [[3, "desc"]],
+            });
+
+            $('a[data-toggle="tab"]').on('show.bs.tab', function (e) {
+                localStorage.setItem('activeTab', $(e.target).attr('href'));
+            });
+            let activeTab = localStorage.getItem('activeTab');
+            if (activeTab) {
+                $('#studentTabs a[href="' + activeTab + '"]').tab('show');
+            }
         });
 
         document.getElementById('lockout-user').addEventListener('click', async function () {
