--- a/clientviews/admin/partials/top-of-menu.partial.tmpl
+++ b/clientviews/admin/partials/top-of-menu.partial.tmpl
@@ -8,6 +8,7 @@
                 <li><a href="/admin/courses/all">All Courses</a></li>
                 <li><a href="/admin/courses/0">New Course</a></li>
                 <li><a href="/admin/courses/assignments">Assignments</a></li>
+                <li><a href="/admin/courses/traffic">Traffic</a></li>
             </ul>
         </li>
     {{end}}
