--- a/clientviews/admin/course-traffic.page.tmpl
+++ b/clientviews/admin/course-traffic.page.tmpl
@@ -79,8 +79,8 @@
                     data: chartdata,
                     options: {
                         legend: {
-                            display: false,
-                            position: 'bottom',
+                            display: true,
+                            position: 'top',
                         },
                         title: {
                             display: true,
