--- a/clientviews/admin/course-traffic.page.tmpl
+++ b/clientviews/admin/course-traffic.page.tmpl
@@ -12,8 +12,8 @@
     <div class="row">
         <div class="offset-4 col-md-4">
             <div class="form-group ">
-                <label for="active">Course</label>
-                <select id="active" name="active" class="custom-select">
+                <label for="course_id">Course</label>
+                <select id="course_id" name="active" class="custom-select" onchange="showCourseData()">
                     {{range (index .RowSets "courses")}}
                         <option value="{{.ID}}" {{if eq .ID $courseID}} selected {{end}}>{{.CourseName}}</option>
                     {{end}}
@@ -35,136 +35,147 @@
 {{define "js"}}
     <script>
 
-        $.ajax({
-            url: "/admin/courses/course/ajax/traffic-data?course_id=1",
-            method: "GET",
-            success: function (data) {
-                let url = [];
-                let views = [];
-                let duration = [];
-                let hms = [];
+        function showCourse(x) {
+            $.ajax({
+                url: "/admin/courses/course/ajax/traffic-data?course_id=" + x,
+                method: "GET",
+                success: function (data) {
+                    let url = [];
+                    let views = [];
+                    let duration = [];
+                    let hms = [];
 
-                for (let i in data) {
-                    url.push(data[i].y);
-                    views.push(data[i].views);
-                    duration.push(data[i].time);
-                    hms.push(new Date(data[i].time * 1000).toISOString().substr(11, 8));
-                }
-
-                let chartdata = {
-                    labels: url,
-                    datasets: [
-                        {
-                            label: 'Views',
-                            backgroundColor: 'rgba(54, 162, 235, 0.5)',
-                            borderColor: 'rgba(54, 162, 235, 0.5)',
-                            hoverBackgroundColor: 'rgba(54, 162, 235, 0.5)',
-                            hoverBorderColor: 'rgba(54, 162, 235, 0.5)',
-                            borderWidth: 1,
-                            data: views,
-                        }
-                    ],
-                };
-
-                let ctx = document.getElementById("durationChart").getContext('2d');
-
-                let barGraph = new Chart(ctx, {
-                    type: 'horizontalBar',
-                    data: chartdata,
-                    options: {
-                        legend: {
-                            display: false,
-                            position: 'top',
-                        },
-                        title: {
-                            display: true,
-                            text: 'Lecture Views',
-                        },
-                        scales: {
-                            yAxes: [{
-                                ticks: {
-                                    beginAtZero: true
-                                }
-                            }],
-                        },
+                    for (let i in data) {
+                        url.push(data[i].y);
+                        views.push(data[i].views);
+                        duration.push(data[i].time);
+                        hms.push(new Date(data[i].time * 1000).toISOString().substr(11, 8));
                     }
-                });
-            },
-            error: function (data) {
-                console.log(data);
-            }
-        });
 
-        $.ajax({
-            url: "/admin/courses/course/ajax/traffic-data?course_id=1",
-            method: "GET",
-            success: function (data) {
-                let url = [];
-                let duration = [];
-                let hms = [];
+                    let chartdata = {
+                        labels: url,
+                        datasets: [
+                            {
+                                label: 'Views',
+                                backgroundColor: 'rgba(54, 162, 235, 0.5)',
+                                borderColor: 'rgba(54, 162, 235, 0.5)',
+                                hoverBackgroundColor: 'rgba(54, 162, 235, 0.5)',
+                                hoverBorderColor: 'rgba(54, 162, 235, 0.5)',
+                                borderWidth: 1,
+                                data: views,
+                            }
+                        ],
+                    };
 
-                for (let i in data) {
-                    url.push(data[i].y);
-                    duration.push(data[i].time);
-                    hms.push(new Date(data[i].time * 1000).toISOString().substr(11, 8));
-                }
+                    let ctx = document.getElementById("durationChart").getContext('2d');
 
-                let chartdata = {
-                    labels: url,
-                    datasets: [
-                        {
-                            label: 'Seconds',
-                            backgroundColor: 'rgba(255, 99, 132, 0.5)',
-                            borderColor: 'rgba(255,99,132,1)',
-                            hoverBackgroundColor: 'rgba(255, 99, 132, 0.8)',
-                            hoverBorderColor: 'rgba(200, 200, 200, 1)',
-                            borderWidth: 1,
-                            data: duration,
-                        },
-                    ],
-                };
-
-                let ctx = document.getElementById("viewsChart").getContext('2d');
-
-                let barGraph = new Chart(ctx, {
-                    type: 'horizontalBar',
-                    data: chartdata,
-                    options: {
-                        legend: {
-                            display: false,
-                            position: 'top',
-                        },
-                        title: {
-                            display: true,
-                            text: 'Time spent in lecture',
-                        },
-                        scales: {
-                            yAxes: [{
-                                ticks: {
-                                    beginAtZero: true
-                                }
-                            }],
-                        },
-                        tooltips: {
-                            mode: 'index',
-                            callbacks: {
-                                footer: function(toolTipItems, data) {
-                                    var t = "";
-                                    toolTipItems.forEach(function(tooltipItem) {
-                                        t = hms[tooltipItem.datasetIndex];
-                                    });
-
-                                    return "Time: " + t;
-                                }
+                    let barGraph = new Chart(ctx, {
+                        type: 'horizontalBar',
+                        data: chartdata,
+                        options: {
+                            legend: {
+                                display: false,
+                                position: 'top',
                             },
-                            footerFontStyle: 'normal'
+                            title: {
+                                display: true,
+                                text: 'Lecture Views',
+                            },
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                    }
+                                }],
+                            },
                         }
+                    });
+                },
+                error: function (data) {
+                    console.log(data);
+                }
+            });
+
+            $.ajax({
+                url: "/admin/courses/course/ajax/traffic-data?course_id=1",
+                method: "GET",
+                success: function (data) {
+                    let url = [];
+                    let duration = [];
+                    let hms = [];
+
+                    for (let i in data) {
+                        url.push(data[i].y);
+                        duration.push(data[i].time);
+                        hms.push(new Date(data[i].time * 1000).toISOString().substr(11, 8));
                     }
-                });
-            },
-            error: function (data) {
-                console.log(data);
-            }
+
+                    let chartdata = {
+                        labels: url,
+                        datasets: [
+                            {
+                                label: 'Seconds',
+                                backgroundColor: 'rgba(255, 99, 132, 0.5)',
+                                borderColor: 'rgba(255,99,132,1)',
+                                hoverBackgroundColor: 'rgba(255, 99, 132, 0.8)',
+                                hoverBorderColor: 'rgba(200, 200, 200, 1)',
+                                borderWidth: 1,
+                                data: duration,
+                            },
+                        ],
+                    };
+
+                    let ctx = document.getElementById("viewsChart").getContext('2d');
+
+                    let barGraph = new Chart(ctx, {
+                        type: 'horizontalBar',
+                        data: chartdata,
+                        options: {
+                            legend: {
+                                display: false,
+                                position: 'top',
+                            },
+                            title: {
+                                display: true,
+                                text: 'Time spent in lecture',
+                            },
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                    }
+                                }],
+                            },
+                            tooltips: {
+                                mode: 'index',
+                                callbacks: {
+                                    footer: function (toolTipItems, data) {
+                                        var t = "";
+                                        toolTipItems.forEach(function (tooltipItem) {
+                                            t = hms[tooltipItem.datasetIndex];
+                                        });
+
+                                        return "Time: " + t;
+                                    }
+                                },
+                                footerFontStyle: 'normal'
+                            }
+                        }
+                    });
+                },
+                error: function (data) {
+                    console.log(data);
+                }
+            });
+        }
+
+
+        function showCourseData() {
+            showCourse(document.getElementById("course_id").value)
+        }
+
+        document.addEventListener("DOMContentLoaded", function () {
+            showCourse(document.getElementById("course_id").value)
         });
     </script>
 
